examples/FCCee/higgs/tautau/xsec/ecm240/ktN-tag/sub/err/condor_1806095.1750.err
----> INFO: Loading analyzers from libFCCAnalyses...
----> INFO: Loading analysis file:
            /work/awiedl/FCCAnalyses/examples/FCCee/higgs/tautau/xsec/ecm240/ktN-tag/QQ/analysis_stage2_QQHH.py
----> INFO: Multithreading enabled. Running over 4 threads
----> INFO: Loading functions.h...
----> INFO: Running over files provided in command line argument...
----> INFO: Creating dataframe object from files:
            	- /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_1955.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_1914.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_2077.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_2471.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_1550.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_1204.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_1071.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_1312.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_370.root	
            - /ceph/awiedl/FCCee/HiggsCP/ecm240/stage1_241202/p8_ee_WW_ecm240/chunk_1330.root	

----> INFO: Number of events:
            	- original: 1,000,000
            	- local:    1,000,000
----> INFO: Output file path:
            /ceph/awiedl/FCCee/HiggsCP/ecm240/ktN-tag/stage2/QQ/HH/p8_ee_WW_ecm240/chunk_126.root
input_line_119:2:102: error: use of undeclared identifier 'TagJet_kt4_cleanup'
auto func0(ROOT::VecOps::RVec<float>& var0, ROOT::VecOps::RVec<float>& var1){return var1[var0>0.5 && TagJet_kt4_cleanup==1]
                                                                                                     ^
----> ERROR: During the execution of the analysis file exception occurred:
             Template method resolution failed:
               ROOT::RDF::RInterface<ROOT::Detail::RDF::RLoopManager,void> ROOT::RDF::RInterface<ROOT::Detail::RDF::RLoopManager,void>::Define(basic_string_view<char,char_traits<char> > name, basic_string_view<char,char_traits<char> > expression) =>
                 runtime_error: 
             RDataFrame: An error occurred during just-in-time compilation. The lines above might indicate the cause of the crash
              All RDF objects that have not run an event loop yet should be considered in an invalid state.

